# funkin-raylib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  configure.bat  configure.sh  run.bat  run.sh  run_dev.bat  run_dev.sh
assets/: scene.lua  script.lua  test.lua
assets/images/game/notes/: notes.xml  receptors.xml
assets/scenes/: frontend_testing.lua  game.lua  initial_testing.lua  original_testing.lua
include/: list.h  log.h  lua_frontend.h  lua_wrapper.h  str.h
src/: SConscript  list.c  lua_frontend.c  lua_wrapper.c  main.c  str.c
